# discord-bot-template

./: .env.example  .gitignore  GEMINI.md  README.md  alembic.ini  dump.csv  pyproject.toml  redis_event_bus_ref.py
alembic/: env.py
alembic/versions/: 202512230837_2473e1c2c7de_add_team_membership_table.py  202601042202_6f44f64e9ff7_add_chat_history_table.py  202601052119_69f36b3d445e_change_chatmessage_id_to_ulid.py  202601060906_75a66b9621f1_add_sent_at_to_chat_messages.py  202601112211_aedea96d51b9_add_system_instructions_table.py  202601121252_3648749029ff_add_event_queue_and_outbox.py  202601121313_11aa72e0ee24_add_notify_triggers.py
app/: container.py
app/api/: __main__.py
app/api/routers/: teams.py  users.py
app/bot/: __main__.py  command_processor.py
app/bot/cogs/: __init__.py  brain_cog.py  chat_cog.py  dm_response_cog.py  memberships_cog.py  teams_cog.py  users_cog.py
app/core/: __init__.py  events.py  mediator.py  result.py
app/core/interfaces/: notification_listener.py
app/domain/: decorators.py
app/domain/aggregates/: chat_history.py  command.py  system_instruction.py  team_membership.py
app/domain/interfaces/: ai_service.py  event_bus.py
app/domain/repositories/: __init__.py  chat_history_repository.py  command_repository.py  interfaces.py  system_instruction_repository.py
app/domain/value_objects/: __init__.py  ai_provider.py  chat_message_id.py  chat_role.py  display_name.py  email.py  membership_role.py  membership_status.py  sent_at.py  system_instruction_id.py  team_name.py  version.py
app/infrastructure/: database.py  orm_mapping.py  orm_registry.py  unit_of_work.py
app/usecases/teams/: create_team.py  (+2 more)
app/worker/: __main__.py  consumer.py  handlers.py  producer.py  registry.py  repository.py
container/: compose.yml
docs/: ARCHITECTURE.md
docs/api/: implementation_guide.md
docs/domain/: DOMAIN_IMPLEMENTATION_GUIDE.md  README.md
docs/infrastructure/: DATABASE_MIGRATIONS.md
scripts/: seed_instructions.py
src/app/: README.md  __init__.py  container.py
tests/: README.md  conftest.py  test_container.py
tests/core/: test_mediator.py
tests/infrastructure/: test_event_bus.py  test_generic_repository_error_cases.py  test_orm_mapping.py  test_repositories.py  test_team_repositories.py  test_unit_of_work.py  test_user_repositories.py
tests/usecases/: test_membership_usecases.py
(+102 files in other folders)
